--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    width: 100%;
+    height: 100%;
+    border-bottom: 1px solid black;
+    padding-bottom: 30px;
 }
 
 .nav__left__text{
@@ -218,6 +222,11 @@ body{
     font-family: ABCFavoriteTrialLight;
     text-decoration: none;
 	padding-bottom: 2px;
+	background: url(./assets/images/underline.png) bottom repeat-x;
+}
+
+.underline-text{
+    padding-bottom: 2px;
 	background: url(./assets/images/underline.png) bottom repeat-x;
 }
 /*--------GALLERY-------*/
