--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+/*
+Theme Name: Roterfaden
+Theme URI: imel.test
+Description: Roterfaden Website
+Version: 1.0
+Author: edin.mukinovic@imel.ba
+Author URI: imel.test
+*/
+
+
+
 body{
     margin: 30px 40px 30px 40px;
     max-width: 100%;
